welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:4: error: not found: value faireFleur
	faireFleur(Color.red)
        ^FlowerCase:5: error: not found: value faireFleur
	faireFleur(Color.cyan)
        ^FlowerCase:6: error: not found: value faireFleur
	faireFleur(Color.green)
        ^FlowerCase:7: error: not found: value faireFleur
	faireFleur(Color.pink)
        ^